@startuml silver

title Silver — modèle en étoile au grain fin, nettoyé et contrôlé

legend right
  * = clé de tri (ORDER BY) = clé de déduplication
  RMT(col) = ReplacingMergeTree versionné sur col
  stay_id = dimension dégénérée partagée, jamais une FK entre faits
end legend

package "Dimensions" {
  entity dim_patient <<RMT(_ingested_at)>> {
    * patient_id : String
    --
    birth_date : Date32
    sex : String  <i>normalisé M/F</i>
    region_code : String
    .. technique ..
    _ingested_at : DateTime
  }

  entity dim_service <<RMT(_ingested_at)>> {
    * service_code : String
    --
    service_label : String  <i>niveau 1</i>
    categorie : String      <i>niveau 2</i>
    pole : String           <i>niveau 3</i>
    capacite_lits : UInt32
    .. technique ..
    _ingested_at : DateTime
  }

  entity dim_cim10 <<RMT(_ingested_at)>> {
    * code_cim10 : String
    --
    libelle : String
    .. technique ..
    _ingested_at : DateTime
  }

  entity dim_ccam <<RMT(_ingested_at)>> {
    * code_ccam : String
    --
    libelle : String
    tarif_euros : UInt32
    .. technique ..
    _ingested_at : DateTime
  }
}

package "Faits" {
  entity fact_sejours <<RMT(_processed_at)>> {
    * stay_id : String
    --
    patient_id : String
    service_code : String
    admission_ts : DateTime
    discharge_ts : Nullable(DateTime)
    duree_sejour_h : Nullable(Float64)
    admission_mode : String
    discharge_mode : String
    readmission_30j : UInt8
    <b>age_at_admission</b> : UInt8
    .. technique ..
    _ingested_at : DateTime
    _processed_at : DateTime
  }

  entity fact_monitoring <<MergeTree>> {
    * stay_id : String
    * ts : DateTime
    --
    patient_id : String
    service_code : String
    heart_rate : Float32
    spo2 : Float32
    temp_c : Float32
    is_alerte_fc : UInt8
    is_alerte_spo2 : UInt8
    is_alerte_temp : UInt8
    .. technique ..
    _ingested_at : DateTime
  }

  entity fact_diagnostics <<RMT(_ingested_at)>> {
    * stay_id : String
    * code_cim10 : String
    --
    patient_id : String
    service_code : String
    type : String
    <b>age_at_diagnostic</b> : UInt8
    .. technique ..
    _ingested_at : DateTime
  }

  entity fact_actes <<RMT(_ingested_at)>> {
    * stay_id : String
    * code_ccam : String
    * acte_ts : DateTime
    --
    patient_id : String
    service_code : String
    .. technique ..
    _ingested_at : DateTime
  }
}

note top of dim_patient
  <b>Aucune colonne d'âge ici</b>
  L'âge n'est pas un attribut du patient,
  c'est une mesure de l'ÉVÉNEMENT. Stocké
  dans la dimension, il exigerait une date
  de référence (today()) fausse pour tout
  fait passé, et jamais rafraîchie puisque
  le watermark interdit de relire une ligne
  déjà traitée : l'âge serait figé au jour
  du premier calcul.
  ----
  Il est donc porté par les faits, calculé
  à la date de l'événement. Le découpage en
  tranches est laissé à Gold : c'est un choix
  de présentation, pas une donnée.
end note

package "Tables techniques" {
  entity _watermarks <<RMT(updated_at)>> {
    * table_name : String
    --
    last_ingested_at : DateTime
    updated_at : DateTime
  }

  entity _rejets <<MergeTree>> {
    * source_table : String
    * detected_at : DateTime
    --
    regle : String
    cle : String
    details : String
    _ingested_at : DateTime
  }
}

dim_patient ||--o{ fact_sejours : patient_id
dim_service ||--o{ fact_sejours : service_code
dim_patient ||--o{ fact_monitoring : patient_id
dim_service ||--o{ fact_monitoring : service_code
dim_patient ||--o{ fact_diagnostics : patient_id
dim_service ||--o{ fact_diagnostics : service_code
dim_cim10 ||--o{ fact_diagnostics : code_cim10
dim_patient ||--o{ fact_actes : patient_id
dim_service ||--o{ fact_actes : service_code
dim_ccam ||--o{ fact_actes : code_ccam

note as N_controles
  <b>Contrôles qualité appliqués ici</b>
  patients : date de naissance valide, sexe en M/F
  sejours : sortie >= admission, patient et service
    existants ; sortie NULL = séjour en cours, conservé
  monitoring : FC 20-250, SpO2 50-100, temp 30-45
  diagnostics : code CIM-10 présent au référentiel
  actes : code CCAM présent au référentiel
  ----
  Toute ligne écartée est tracée dans _rejets
  avec la règle et les valeurs en cause.
end note
N_controles .. _rejets

note bottom of fact_sejours
  ORDER BY stay_id seul : la clé de tri servant
  aussi de clé de déduplication, elle ne doit
  contenir que des colonnes immuables. Y mettre
  service_code créerait deux lignes pour un même
  séjour dont le service serait corrigé.
  ----
  _ingested_at  = watermark de lecture
  _processed_at = version d'écrasement
  Distinction nécessaire car readmission_30j
  (lagInFrame sur tout l'historique du patient)
  impose de recalculer d'anciens séjours quand
  le patient revient.
end note

note bottom of fact_monitoring
  <b>Seul fait en MergeTree simple — limite assumée</b>
  Le flux source est purement additif : une clé
  stay_id+ts n'est jamais redéposée par le CHU.
  Mais le PIPELINE, lui, peut relire tout Bronze
  après un rejeu ou un reset de watermark, et
  rien ne déduplique alors les lignes réinsérées.
  ----
  C'est la seule table du projet où rejouer une
  ingestion fausse les chiffres. Les deux autres
  faits sont en ReplacingMergeTree sur leur grain
  et absorbent le cas sans intervention.
  ----
  Correctif connu : RMT(_ingested_at) sur
  (stay_id, ts) — la clé de tri EST déjà le grain.
end note

note bottom of fact_actes
  ReplacingMergeTree bien que le flux soit additif,
  contrairement à fact_monitoring : la clé de tri
  est exactement le grain, donc un rejeu ne peut
  pas dupliquer. Coût nul, une classe de panne
  en moins.
end note

note bottom of fact_diagnostics
  <b>Factless fact table</b> : enregistre la survenue
  d'un fait (ce séjour porte ce diagnostic) sans
  grandeur à agréger. Aplatie depuis
  bronze.diagnostics via ARRAY JOIN.
end note

@enduml
